# cat-bot

./: .env.exemple  .gitignore  Cargo.toml  Dockerfile  README.md  README.ru.md  exemple.env
deployment/: compose.yml
migrations/: 20250404095010_chats.sql
migrations/postgres/: 20250404095010_chats.sql
migrations/sqlite/: 20250404151534_add_field_chats.sql
src/: configs.rs  init_db.rs  interface.rs  lib.rs  main.rs  models.rs  repositories.rs  shared.rs  sql_lite_db.rs  the_cats_api.rs
src/adapters/: mod.rs
src/adapters/bot/: commands.rs  endpoints.rs  mod.rs  schemas.rs
src/adapters/get_pictures/: composite.rs  get_picture_enum.rs  mod.rs  the_cats_api.rs  the_dogs_api.rs
src/adapters/repositories/: in_memory.rs  mod.rs  postgres.rs  postgres_chat_repository.rs  sqlite.rs  sqlite_chat_repository.rs  sqlx_helper.rs  sqlx_repository.rs
src/adapters/repositories/in_memory/: chat_repository.rs
src/adapters/repositories/postgres/: chat_repository.rs
src/adapters/repositories/sqlite/: chat_repository.rs
src/contracts/: chat_uc.rs  get_picture.rs  mod.rs  models.rs  picture_uc.rs
src/entities/: chat.rs  repositories.rs
src/usecases/: chat_uc.rs  mod.rs  picture_uc.rs
