[package]
name = "cat-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
log = "0.4"
dotenvy = "0.15"
env_logger = "0.11"
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
teloxide = { version = "0.14.1", features = ["macros"] }
