[package]
name = "cat-bot"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Ang2Tea/cat-bot"
readme = "README.md"

[features]
default = ["in-memory"]
in-memory = []
sqlx = ["dep:sqlx"]
postgres = ["sqlx", "sqlx/postgres"]
sqlite = ["sqlx", "sqlx/sqlite"]

[dependencies]
futures = "0.3"
tokio = { version = "1.44", features = ["full"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
teloxide = { version = "0.14.1", features = ["macros"] }
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio"] }
